# join-order

./: README.md
experiments/: join_order_study.py
multicore-hashjoins/multicore-hashjoins-0.1/: Makefile  config.status  configure~  npo-test.sh  pro-test.sh  result.log.old  rstest.sh  test.sh
multicore-hashjoins/multicore-hashjoins-0.1/autom4te.cache/: output.1  output.2  requests
multicore-hashjoins/multicore-hashjoins-0.1/src/: Makefile  Makefile.am  Makefile.in  mchashjoins  no_partitioning_join.c  npj_params.h  parallel_radix_join.c  prj_params  prj_params.h
multicore-hashjoins/multicore-hashjoins-0.1/src/.deps/: mchashjoins-cpu_mapping.Po  mchashjoins-generator.Po  mchashjoins-genzipf.Po  mchashjoins-main.Po  mchashjoins-no_partitioning_join.Po  mchashjoins-parallel_radix_join.Po  mchashjoins-perf_counters.Po
results/: join_order_results.csv  join_order_results.json  workload_design.md
sort-merge-joins/sort-merge-joins-1.4/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  rstest.sh  sort-test.sh  test.sh
sort-merge-joins/sort-merge-joins-1.4/doc/: Doxyfile
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/: Makefile  check.pc  check_stdint.h  config.h  config.status  libtool
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/checkmk/: Makefile
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/doc/: Makefile  check_money.1-2.c.diff  check_money.2-3.c.diff  check_money.3-6.c.diff  check_money.6-7.c.diff  money.1-2.h.diff  money.1-3.c.diff  money.3-4.c.diff  money.4-5.c.diff  money.5-6.c.diff
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/lib/: Makefile
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/lib/.deps/: clock_gettime.Plo  libcompat.Plo  timer_create.Plo  timer_delete.Plo  timer_settime.Plo
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/src/: Makefile
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/src/.deps/: check.Plo  check_error.Plo  check_list.Plo  check_log.Plo  check_msg.Plo  check_pack.Plo  check_print.Plo  check_run.Plo  check_str.Plo
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/src/.libs/: libcheck.0.dylib
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/tests/: Makefile  check_check  check_check_export  check_mem_leaks  check_nofork  check_stress  check_thread_stress  ex_output  test.xml
sort-merge-joins/sort-merge-joins-1.4/lib/check-0.9.12/tests/.deps/: check_check-check_check_exit.Po  check_check-check_check_fixture.Po  check_check-check_check_fork.Po  check_check-check_check_limit.Po  check_check-check_check_log.Po  check_check-check_check_log_internal.Po  check_check-check_check_main.Po  check_check-check_check_master.Po  check_check-check_check_msg.Po  check_check-check_check_pack.Po  check_check-check_check_selective.Po  check_check-check_check_sub.Po  check_check-check_list.Po  check_check_export-check_check_export_main.Po  check_check_export-check_check_fork.Po  check_check_export-check_check_log.Po  check_check_export-check_check_master.Po  check_check_export-check_check_sub.Po  check_mem_leaks-check_check_exit.Po  check_mem_leaks-check_check_fork.Po  check_mem_leaks-check_check_log.Po  check_mem_leaks-check_check_master.Po  check_mem_leaks-check_check_selective.Po  check_mem_leaks-check_check_sub.Po  check_mem_leaks-check_mem_leaks.Po  check_nofork.Po  check_stress.Po  check_thread_stress-check_thread_stress.Po  ex_output.Po
sort-merge-joins/sort-merge-joins-1.4/lib/intel-pcm-2.35/PCM_Win/: pcm.vcproj
sort-merge-joins/sort-merge-joins-1.4/src/: Makefile  Makefile.am  Makefile.in  bench_merge  bench_multiwaymerge  bench_partitioning  bench_sort  main.c  sortmergejoins  test.sh  tputbench  types.h
sort-merge-joins/sort-merge-joins-1.4/src/.deps/: bench_merge-mergebench.Po  bench_merge-testutil.Po  bench_multiwaymerge-avx_multiwaymerge.Po  bench_multiwaymerge-multiwaymergebench.Po  bench_multiwaymerge-scalar_multiwaymerge.Po  bench_multiwaymerge-testutil.Po  bench_partitioning-cpu_mapping.Po  bench_partitioning-generator.Po  bench_partitioning-genzipf.Po  bench_partitioning-partition.Po  bench_partitioning-partitioningbench.Po  bench_sort-avx_multiwaymerge.Po  bench_sort-avxsort.Po  bench_sort-avxsort_multiway.Po  bench_sort-cpu_mapping.Po  bench_sort-generator.Po  bench_sort-genzipf.Po  bench_sort-merge.Po  bench_sort-sortbench.Po  bench_sort-testutil.Po  sortmergejoins-avx_multiwaymerge.Po  sortmergejoins-avxsort.Po  sortmergejoins-cpu_mapping.Po  sortmergejoins-generator.Po  sortmergejoins-genzipf.Po  sortmergejoins-joincommon.Po  sortmergejoins-main.Po  sortmergejoins-merge.Po  sortmergejoins-partition.Po  sortmergejoins-scalar_multiwaymerge.Po  sortmergejoins-scalarsort.Po  sortmergejoins-sortmergejoin_mpsm.Po  sortmergejoins-sortmergejoin_multipass.Po  sortmergejoins-sortmergejoin_multiway.Po  tputbench-avx_multiwaymerge.Po  tputbench-avxsort.Po  tputbench-cpu_mapping.Po  tputbench-generator.Po  tputbench-genzipf.Po  tputbench-joincommon.Po  (+5 more)
sort-merge-joins/sort-merge-joins-1.4/src/avxsort/: avxcommon.h  avxsort.h  avxsort_core.h  avxsort_multiway.c  avxsort_multiway.h
sort-merge-joins/sort-merge-joins-1.4/src/bench/: mergebench.c  multiwaymergebench.c  partitioningbench.c  sortbench.c  tputbench.c
sort-merge-joins/sort-merge-joins-1.4/src/datagen/: generator.c  generator.h
sort-merge-joins/sort-merge-joins-1.4/src/joins/: joincommon.c  joincommon.h  sortmergejoin_mpsm.c  sortmergejoin_mpsm.h  sortmergejoin_multipass.c  sortmergejoin_multipass.h  sortmergejoin_multiway.c  sortmergejoin_multiway.h
sort-merge-joins/sort-merge-joins-1.4/src/merge/: avx_multiwaymerge.c  merge.c  scalar_multiwaymerge.c
sort-merge-joins/sort-merge-joins-1.4/src/partition/: partition.h
sort-merge-joins/sort-merge-joins-1.4/src/scalarsort/: scalarsort.c  scalarsort.h
sort-merge-joins/sort-merge-joins-1.4/src/util/: cpu_mapping.c  cpu_mapping.h
sort-merge-joins/sort-merge-joins-1.4/tests/: Makefile  Makefile.am  Makefile.in  check_partitioning.c  testutil.c
(+6 files in other folders)
